added second and third blog

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div>
         <h3>
-            My first website
+            My first Blog
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam praesentium optio dolorem quidem sint cupiditate architecto non voluptates voluptatum odio nostrum mollitia impedit saepe, modi ut tempora dignissimos! Sint reprehenderit nesciunt sapiente officiis accusantium iure, doloribus consequatur voluptatibus numquam.</p>
     </div>
     <div>
         <h3>
-            My first website
+            My Second Blog
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam praesentium optio dolorem quidem sint cupiditate architecto non voluptates voluptatum odio nostrum mollitia impedit saepe, modi ut tempora dignissimos! Sint reprehenderit nesciunt sapiente officiis accusantium iure, doloribus consequatur voluptatibus numquam.</p>
     </div>
     <div>
         <h3>
-            My first website
+            My Third Blog
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam praesentium optio dolorem quidem sint cupiditate architecto non voluptates voluptatum odio nostrum mollitia impedit saepe, modi ut tempora dignissimos! Sint reprehenderit nesciunt sapiente officiis accusantium iure, doloribus consequatur voluptatibus numquam.</p>
     </div>
