Added an list about how to push git into github

--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam praesentium optio dolorem quidem sint cupiditate architecto non voluptates voluptatum odio nostrum mollitia impedit saepe, modi ut tempora dignissimos! Sint reprehenderit nesciunt sapiente officiis accusantium iure, doloribus consequatur voluptatibus numquam.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"meaningful commit message"</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
